<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_title_bar_container"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="#ffd55a3d"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:text="21点餐提醒"
            android:shadowRadius="1.6"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dip" >
            
            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="21点餐提醒您，点外卖的时间到了！"
                style="@style/text_style_color1_18"/>
            
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_order"
                style="@style/text_style_color2_16"
                android:layout_width="0dip"
                android:layout_height="40dip"
                android:layout_weight="1"
                android:text="立即点餐" />

            <ImageView
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/line_color" />

            <Button
                android:id="@+id/btn_ignore"
                style="@style/text_style_color2_16"
                android:layout_width="0dip"
                android:layout_height="40dip"
                android:layout_weight="1"
                android:text="忽略" />
        </LinearLayout>
    </LinearLayout>

    <TableLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableRow
            android:id="@+id/tableRow0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/Button1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="1"
                android:text="@string/_1" />

            <Button
                android:id="@+id/Button2"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="2"
                android:text="@string/_2" />

            <Button
                android:id="@+id/Button3"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="3"
                android:text="@string/_3" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/Button4"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="4"
                android:text="@string/_4" />

            <Button
                android:id="@+id/Button5"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="5"
                android:text="@string/_5" />

            <Button
                android:id="@+id/Button6"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="6"
                android:text="@string/_6" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/Button7"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="7"
                android:text="@string/_7" />

            <Button
                android:id="@+id/Button8"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="8"
                android:text="@string/_8" />

            <Button
                android:id="@+id/Button9"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="9"
                android:text="@string/_9" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/Button_decimal"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="."
                android:text="@string/decimal_button_text" />

            <Button
                android:id="@+id/Button0"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="0"
                android:text="@string/_0" />

            <Button
                android:id="@+id/Button_minus"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="-"
                android:text="@string/minus_button_text" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/Button_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="clear"
                android:text="@string/clear_button_text" />
        </TableRow>
    </TableLayout>

</LinearLayout>