<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bpv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/lottery_type_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/text_style_white_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/number_bg"
            android:gravity="center"
            android:text="@string/bw" >
        </TextView>

        <com.lian.lottery.views.BallPanelView
            android:id="@+id/bpv_bw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dip"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="6dip"
            bpv:ballCount="10" />
    </LinearLayout>

    <ImageView
        style="@style/betting_line_style"
        android:layout_marginLeft="60dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/text_style_white_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/number_bg"
            android:gravity="center"
            android:text="@string/sw" >
        </TextView>

        <com.lian.lottery.views.BallPanelView
            android:id="@+id/bpv_sw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dip"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="6dip"
            bpv:ballCount="10" />
    </LinearLayout>

    <ImageView
        style="@style/betting_line_style"
        android:layout_marginLeft="60dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/text_style_white_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/number_bg"
            android:gravity="center"
            android:text="@string/gw" />

        <com.lian.lottery.views.BallPanelView
            android:id="@+id/bpv_gw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dip"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="6dip"
            bpv:ballCount="10" />
    </LinearLayout>

</LinearLayout>