<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <TextView
                    style="@style/text_style_color1_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="版本:" />

                <TextView
                    android:id="@+id/tv_version"
                    style="@style/text_style_color1_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/text_style_color1_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="官网:" />

                <TextView
                    android:id="@+id/tv_net"
                    style="@style/text_style_color1_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@color/white"
                    android:text="@string/web_url2"
                    android:textColor="@color/person_center_item_text_color" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:background="@color/line_color"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone">

                <TextView
                    style="@style/text_style_color1_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="电话:" />

                <TextView
                    android:id="@+id/tv_phone"
                    style="@style/text_style_color1_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/hot_line_number"
                    android:textColor="@color/person_center_item_text_color" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_ratting"
                style="@style/text_style_color2_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_btn7"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="评分支持"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        style="@style/text_style_color1_14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/companny_name"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_copyright"
        style="@style/text_style_color2_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/copyright" />

</LinearLayout>